8. 字符串转换整数 (atoi)

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/primaryAlgorithms/string/MyAtoi.java=UTF-8
 encoding//src/primaryAlgorithms/string/Reverse.java=UTF-8
